<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_welcome_page">Welcome to Story App</string>
    <string name="message_welcome_page">Dicoding Story App adalah story seputar Dicoding, mirip seperti post Instagram namun special untuk Dicoding.</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="story_app_icon">Story App Icon</string>
    <string name="title_signup_page">Yuk Bergabung Dicoding Story Apps</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loading">Loading...</string>
    <string name="title_login_page">Selamat datang kembali</string>
    <string name="message_login_page">Siap kembali melihat cerita hebat dicoding?</string>
    <string name="storyPhoto">story photo</string>
    <string name="content_description_media">story photo</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="createdAt">Minggu, 08 Januari 2023</string>
    <string name="nama">Richard Owen Hoan</string>
    <string name="addButton">Tambah Story</string>
    <string name="logout">Logout</string>
    <string name="enter_your_story_description">Enter your story description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="include_my_location">Include My Location</string>
    <string name="empty_location_warning">Failed To Get Location</string>
</resources>